--- a/src/app/components/dashboard/dashboard.html
+++ b/src/app/components/dashboard/dashboard.html
@@ -59,7 +59,7 @@
             </span>
           </a>
           <button (click)="logout()" class="btn-logout">
-            <span>🚪</span> Logout
+            <span class="logout-icon">?</span> Logout
           </button>
         </div>
       </div>
@@ -196,4 +196,5 @@
     </div>
   </div>
 </div>
+
 
