Simplify logout button by removing unnecessary icon

--- a/src/app/components/dashboard/dashboard.html
+++ b/src/app/components/dashboard/dashboard.html
@@ -58,9 +58,7 @@
               <span class="btn-create-subtitle">Add a new profile</span>
             </span>
           </a>
-          <button (click)="logout()" class="btn-logout">
-            <span class="logout-icon">-></span> Logout
-          </button>
+          <button (click)="logout()" class="btn-logout">Logout</button>
         </div>
       </div>
     </header>
