--- a/src/app/components/transactions/transactions.html
+++ b/src/app/components/transactions/transactions.html
@@ -36,6 +36,7 @@
         </div>
         <button class="user-action">View</button>
       </div>
+      <button class="logout-btn" type="button">Log out</button>
     </div>
   </aside>
 
