--- a/src/app/components/transactions/transactions.html
+++ b/src/app/components/transactions/transactions.html
@@ -25,16 +25,8 @@
 
     <div class="sidebar-footer">
       <div class="user-card">
-        <img
-          class="user-avatar"
-          alt="User avatar"
-          src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><defs><linearGradient id='g' x1='0' y1='0' x2='1' y2='1'><stop stop-color='%230ea5a4' offset='0'/><stop stop-color='%231f7a75' offset='1'/></linearGradient></defs><circle cx='32' cy='32' r='32' fill='url(%23g)'/><text x='32' y='38' font-size='20' text-anchor='middle' fill='white' font-family='Arial' font-weight='700'>SP</text></svg>"
-        />
-        <div class="user-details">
-          <div class="user-name">S. Perera</div>
-          <div class="user-email">s.perera@email.com</div>
-        </div>
-        <button class="user-action">View</button>
+        <img class="panel-image" src="favicon.ico" alt="Sidebar image one" />
+        <img class="panel-image" src="favicon.ico" alt="Sidebar image two" />
       </div>
       <button class="logout-btn" type="button" (click)="logout()">Log out</button>
     </div>
