--- a/src/app/components/budget/budget.html
+++ b/src/app/components/budget/budget.html
@@ -2,7 +2,7 @@
   <aside class="sidebar">
     <div class="sidebar-header">
       <h2 class="logo">
-        <img class="logo-mark" src="favicon.ico" alt="Finance logo" />
+        <img class="logo-mark" src="images/logo-mark.svg" alt="Finance logo" />
         <span>Finance</span>
       </h2>
     </div>
@@ -28,8 +28,8 @@
 
     <div class="sidebar-footer">
       <div class="user-card">
-        <img class="panel-image" src="favicon.ico" alt="Sidebar image one" />
-        <img class="panel-image" src="favicon.ico" alt="Sidebar image two" />
+        <img class="panel-image" src="images/sidebar-1.svg" alt="Sidebar image one" />
+        <img class="panel-image" src="images/sidebar-2.svg" alt="Sidebar image two" />
       </div>
       <button class="logout-btn" type="button" (click)="logout()">Log out</button>
     </div>
