--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -3,7 +3,7 @@
     <section class="login-hero">
       <div class="brand">
         <span class="brand-mark">
-          <img src="favicon.ico" alt="Finance Flow logo" />
+          <img src="images/logo-mark.svg" alt="Finance Flow logo" />
         </span>
         <div>
           <p class="brand-name">Finance Flow</p>
