Replace favicon with SVG images for improved visual quality in dashboard, register, and transactions components

--- a/src/app/components/dashboard/dashboard.html
+++ b/src/app/components/dashboard/dashboard.html
@@ -3,7 +3,7 @@
   <aside class="sidebar">
     <div class="sidebar-header">
       <h2 class="logo">
-        <img class="logo-mark" src="favicon.ico" alt="Finance logo" />
+        <img class="logo-mark" src="images/logo-mark.svg" alt="Finance logo" />
         <span>Finance</span>
       </h2>
     </div>
@@ -29,8 +29,8 @@
 
     <div class="sidebar-footer">
       <div class="user-card">
-        <img class="panel-image" src="favicon.ico" alt="Sidebar image one" />
-        <img class="panel-image" src="favicon.ico" alt="Sidebar image two" />
+        <img class="panel-image" src="images/sidebar-1.svg" alt="Sidebar image one" />
+        <img class="panel-image" src="images/sidebar-2.svg" alt="Sidebar image two" />
       </div>
     </div>
   </aside>
@@ -47,8 +47,8 @@
             <div class="clock-date">{{ currentDate() }}</div>
           </div>
           <div class="navbar-image-pair">
-            <img class="panel-image" src="favicon.ico" alt="Header image one" />
-            <img class="panel-image" src="favicon.ico" alt="Header image two" />
+            <img class="panel-image" src="images/header-1.svg" alt="Header image one" />
+            <img class="panel-image" src="images/header-2.svg" alt="Header image two" />
           </div>
         </div>
       </div>
